updated the page layout so that the right side page content has a max height of screen height, and any content will become scrolled inside the screen height, instead of having to scroll past the screen height like before. This fixes an issue where the sidebar was 'jumping' when scrolling the right side content. Needed to fix the footer to the bottom as well so it would not get cut off

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+  height: 100%;
+}
+
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
