--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -1,11 +1,14 @@
 .sidebar {
-	height: 100%;	
+	height: 100vh;
+    height: 100dvh;
 	width: var(--sidebar-width);
 	top: 0;
 	left: 0;
 	position: fixed;
 	background-color: var(--bs-light);
 	z-index: var(--z-index-top);
+	display: flex;          
+    flex-direction: column; 
 
 	& a {
 		padding: 8px;
@@ -18,6 +21,10 @@
 	position: relative;
 	margin-left: var(--m-spacing);
 	margin-right: var(--m-spacing);
+	flex: 1;               
+    display: flex;         
+    flex-direction: column;
+    justify-content: space-between; /* pushes bottom bar down */
 }
 
 .sidebar__links {
@@ -28,11 +35,9 @@
 }
 
 .sidebar__bottom-bar {
-	bottom: 0;
-	left: 0;
 	width: 100%;
 	border-radius: var(--radius-inputs);
-	position: fixed;
+	height: 5rem;
 }
 
 .sidebar__bottom-bar__content {
@@ -50,9 +55,9 @@
 	}
 }
 
-@media screen and (max-height: 700px) {
+/* @media screen and (max-height: 700px) {
 	.sidebar__links {
 		height: 250px;
 		overflow-y: scroll;
 	}
-}
+} */
